--- a/html/index.html
+++ b/html/index.html
@@ -19,20 +19,20 @@
             <div class="nav_go">
                 <ul>
                     <li class="kage">
-                        <div class="kage_up"><a href="javascript:;">首页</a></div>
+                        <div class="kage_up"><a href="index.html">首页</a></div>
                     </li>
                     <li class="kage">
-                        <div class="kage_up"><a href="javascript:;">视频课程</a></div>
+                        <div class="kage_up"><a href="classes.html">视频课程</a></div>
                         <div class="conceal">
-                            <div><a href="javascript:;">零基础入门</a></div>
+                            <div><a href="classes_video.html">零基础入门</a></div>
                             <div><a href="javascript:;">nodejs入门</a></div>
                         </div>
                     </li>
                     <li class="kage">
-                        <div class="kage_up"><a href="javascript:;">精选笔记</a></div>
+                        <div class="kage_up"><a href="sift_note.html">精选笔记</a></div>
                     </li>
                     <li class="kage">
-                        <div class="kage_up"><a href="javascript:;">关于我们</a></div>
+                        <div class="kage_up"><a href="about_us.html">关于我们</a></div>
                     </li>
                 </ul>
             </div>
