--- a/html/index.html
+++ b/html/index.html
@@ -50,11 +50,8 @@
     </div>
     <div class="job">
         <img src="../images/index/u20.png" alt="就业前景"/>
+        <img src="../images/index/u24.png" alt="开发前景"/>
     </div>
-    <div class="job">
-        <img src="../images/index/u24.png" alt="开发职位"/>
-    </div>
-
     <div class="main">
         <div class="video">
             <div class="video_h">
