--- a/html/index.html
+++ b/html/index.html
@@ -61,40 +61,78 @@
             <div>
                 <ul>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>本课程主要讲解基本的HTML、CSS、JAVASCRIPT的基本语法</h4>
+                            </div>
+                        </div>
                         <a href="javascript:;">前端入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>HTML5新增的属性有哪些？有什么好处
+                                行内元素有哪些？盒子元素有哪些？</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">HTML入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>HTML5新增的属性有哪些？有什么好处
+                                    新增的属性有什么作用？</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">CSS入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>了解JAVASCRIPT的用法；以及数组，字符串，布尔等类型</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">JAVASCRIPT入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>ES6的新语法和如何让浏览器认识es6的语法</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">REACT入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>讲授nodejs的入门和介绍</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">nodejs入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>requirejs的作用和语法</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">requirejs入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>"$"符号的用法；jquery的用法和作用</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">JQUERY入门课程…</a>
                     </li>
                     <li class="video_box">
-                        <div class="video_box_work"><img src="../images/index/u19S.png" alt=""></div>
-                        <a href="javascript:;">前端入门课程…</a>
+                        <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
+                            <div class="overlay">
+                                <h4>结合上面的所学的h5、css3、js和jquery知识点写的实战项目</h4>
+                            </div>
+                        </div>
+                        <a href="javascript:;">综合实例</a>
                     </li>
                 </ul>
             </div>
