--- a/html/classes_video_realize.html
+++ b/html/classes_video_realize.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>牧码学院</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.css"/>
+	<link rel="stylesheet" href="../css/animate.css"/>
 	<link rel="stylesheet" href="../css/base.css"/>
 	<link rel="stylesheet" href="../css/index.css"/>
 	<link rel="stylesheet" href="../css/classes_video_realize.css"/>
@@ -49,12 +50,12 @@
 	    </div>
 	</div>
 	<div class="classes_v_realize">
-		<div class="summary">
+		<div class="summary bounceInDown animated" data-wow-duration="500ms"  data-wow-delay="900ms">
 			简介：本课程是基于websocket的火拼俄罗斯的升级版本，课程中在前两个课的基础上实现了用两个浏览器对战模式，完整的实现了游戏的过程。
 		</div>
 		<div class="section">
 			<div class="section_only">
-				<h3>1章&nbsp;课程介绍</h3>
+				<h3 class="fadeInLeft animated">1章&nbsp;课程介绍</h3>
 				<h6>本章节主要对课程的主要内容进行了简单的介绍</h6>
 				<div class="videos">
 					<div class="video-off">
@@ -69,7 +70,7 @@
 			</div>
 
 			<div class="section_only">
-				<h3>2章&nbsp;升级版俄罗斯方块的实现</h3>
+				<h3 class="fadeInLeft animated">2章&nbsp;升级版俄罗斯方块的实现</h3>
 				<h6>本章节从各个方面对俄罗斯方块的升级版惊醒了实现，以及细节的优化</h6>
 				<div class="videos">
 					<div class="video-off">
@@ -100,7 +101,7 @@
 			</div>
 
 			<div class="section_only">
-				<h3>1章&nbsp;课程总结</h3>
+				<h3 class="fadeInLeft animated">3章&nbsp;课程总结</h3>
 				<h6>本章节主要对课程的主要内容进行了简单的总结</h6>
 				<div class="videos">
 					<div class="video-off">
