--- a/_html/index.html
+++ b/_html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>牧码学院</title>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../css/animate.css"/>
     <link rel="stylesheet" href="../css/base.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
 </head>
@@ -23,7 +24,7 @@
             </div>
             <div>
                 <ul>
-                    <li class="video_box">
+                    <li class="video_box fadeInLeft animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>本课程主要讲解基本的HTML、CSS、JAVASCRIPT的基本语法</h4>
@@ -31,7 +32,7 @@
                         </div>
                         <a href="javascript:;">前端入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInUp animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>HTML5新增的属性有哪些？有什么好处
@@ -40,7 +41,7 @@
                         </div>
                         <a href="javascript:;">HTML入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInRight animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>HTML5新增的属性有哪些？有什么好处
@@ -49,7 +50,7 @@
                         </div>
                         <a href="javascript:;">CSS入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInLeft animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>了解JAVASCRIPT的用法；以及数组，字符串，布尔等类型</h4>
@@ -57,7 +58,7 @@
                         </div>
                         <a href="javascript:;">JAVASCRIPT入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInUp animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>ES6的新语法和如何让浏览器认识es6的语法</h4>
@@ -65,7 +66,7 @@
                         </div>
                         <a href="javascript:;">REACT入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInRight animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>讲授nodejs的入门和介绍</h4>
@@ -73,7 +74,7 @@
                         </div>
                         <a href="javascript:;">nodejs入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInLeft animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>requirejs的作用和语法</h4>
@@ -81,7 +82,7 @@
                         </div>
                         <a href="javascript:;">requirejs入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInUp animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>"$"符号的用法；jquery的用法和作用</h4>
@@ -89,7 +90,7 @@
                         </div>
                         <a href="javascript:;">JQUERY入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInRight animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>结合上面的所学的h5、css3、js和jquery知识点写的实战项目</h4>
