--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>牧码学院</title>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../css/animate.css"/>
     <link rel="stylesheet" href="../css/base.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
 </head>
@@ -60,7 +61,7 @@
             </div>
             <div>
                 <ul>
-                    <li class="video_box">
+                    <li class="video_box fadeInLeft animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>本课程主要讲解基本的HTML、CSS、JAVASCRIPT的基本语法</h4>
@@ -68,7 +69,7 @@
                         </div>
                         <a href="javascript:;">前端入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInUp animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>HTML5新增的属性有哪些？有什么好处
@@ -77,7 +78,7 @@
                         </div>
                         <a href="javascript:;">HTML入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInRight animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>HTML5新增的属性有哪些？有什么好处
@@ -86,7 +87,7 @@
                         </div>
                         <a href="javascript:;">CSS入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInLeft animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>了解JAVASCRIPT的用法；以及数组，字符串，布尔等类型</h4>
@@ -94,7 +95,7 @@
                         </div>
                         <a href="javascript:;">JAVASCRIPT入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInUp animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>ES6的新语法和如何让浏览器认识es6的语法</h4>
@@ -102,7 +103,7 @@
                         </div>
                         <a href="javascript:;">REACT入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInRight animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>讲授nodejs的入门和介绍</h4>
@@ -110,7 +111,7 @@
                         </div>
                         <a href="javascript:;">nodejs入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInLeft animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>requirejs的作用和语法</h4>
@@ -118,7 +119,7 @@
                         </div>
                         <a href="javascript:;">requirejs入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInUp animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>"$"符号的用法；jquery的用法和作用</h4>
@@ -126,7 +127,7 @@
                         </div>
                         <a href="javascript:;">JQUERY入门课程…</a>
                     </li>
-                    <li class="video_box">
+                    <li class="video_box fadeInRight animated">
                         <div class="video_box_work"><img src="../images/index/u19S.png" alt="">
                             <div class="overlay">
                                 <h4>结合上面的所学的h5、css3、js和jquery知识点写的实战项目</h4>
