--- a/_html/index.html
+++ b/_html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/animate.css"/>
     <link rel="stylesheet" href="../css/base.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
+    <link rel="shortcut icon" href="../images/favicon.ico"/>
 </head>
 <body>
 
