--- a/_html/classes_video.html
+++ b/_html/classes_video.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/base.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
     <link rel="stylesheet" href="../css/classes_video.css"/>
+    <link rel="shortcut icon" href="../images/favicon.ico"/>
 </head>
 <body>
 <div class="all">
