--- a/html/classes_video_realize.html
+++ b/html/classes_video_realize.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../css/base.css"/>
 	<link rel="stylesheet" href="../css/index.css"/>
 	<link rel="stylesheet" href="../css/classes_video_realize.css"/>
+	<link rel="shortcut icon" href="../images/favicon.ico"/>
 </head>
 <body>
 <div class="all">
